--- a/nbooks/Gemfile
+++ b/nbooks/Gemfile
@@ -5,3 +5,5 @@ gem 'mongoid', '7.1.4'
 gem "rspec"
 gem "sinatra"
 gem "sinatra-contrib"
+gem 'faker', '~> 2.0.0'
+# gem 'faker', :git => 'https://github.com/faker-ruby/faker.git', :branch => 'master'
